--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "bluebird": "^3.0.3",
     "core-js": "^1.2.4",
     "css-loader": "^0.21.0",
+    "es6-collections": "^0.5.5",
+    "es6-symbol": "^3.0.1",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "extract-text-webpack-plugin": "^0.8.2",
