--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.0.14",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.0",
