--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-transform-regenerator": "^6.0.14",
     "babel-plugin-transform-runtime": "^6.0.14",
     "babel-preset-es2015": "^6.0.14",
+    "babel-preset-nktpro": "0.0.1",
     "babel-preset-react": "^6.0.14",
     "babel-preset-stage-0": "^6.0.14",
     "bluebird": "^3.0.3",
