--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "eslint-plugin-react": "^3.6.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "grunt": "^0.4.5",
+    "grunt-release": "^0.13.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.0.0",
     "gulp-eslint": "^1.0.0",
