Added npm install for test

--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,9 @@ dependencies:
 
 test:
   override:
-    - docker run -i -v ${PWD}/test:/opt/reack/app -w /opt/reack/app nktpro/reack gulp
-    - ls ${PWD}/test/build/index.js && ls ${PWD}/test/build/index.html
+    - cd test && npm install
+    - docker run -i -v ${PWD}:/opt/reack/app -w /opt/reack/app nktpro/reack gulp
+    - ls ${PWD}/build/index.js && ls ${PWD}/build/index.html
 
 deployment:
   hub:
