--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-plugin-syntax-jsx": "^6.0.14",
     "babel-plugin-transform-async-to-module-method": "^6.0.14",
     "babel-plugin-transform-decorators": "^6.0.14",
+    "babel-plugin-transform-class-properties": "^6.0.14",
+    "babel-plugin-transform-object-rest-spread": "^6.0.14",
     "babel-plugin-transform-es2015-arrow-functions": "^6.0.14",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.0.14",
     "babel-plugin-transform-es2015-block-scoping": "^6.0.14",
