--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.0.14",
     "babel-eslint": "^4.1.3",
+    "babel-helper-remap-async-to-generator": "^6.0.16",
     "babel-loader": "^6.0.0",
+    "babel-plugin-syntax-async-functions": "^6.0.14",
     "babel-plugin-syntax-flow": "^6.0.14",
     "babel-plugin-syntax-jsx": "^6.0.14",
     "babel-plugin-transform-async-to-module-method": "^6.0.14",
-    "babel-plugin-transform-decorators": "^6.0.14",
     "babel-plugin-transform-class-properties": "^6.0.14",
-    "babel-plugin-transform-object-rest-spread": "^6.0.14",
+    "babel-plugin-transform-decorators": "^6.0.14",
     "babel-plugin-transform-es2015-arrow-functions": "^6.0.14",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.0.14",
     "babel-plugin-transform-es2015-block-scoping": "^6.0.14",
@@ -34,13 +35,14 @@
     "babel-plugin-transform-es2015-typeof-symbol": "^6.0.14",
     "babel-plugin-transform-es2015-unicode-regex": "^6.0.14",
     "babel-plugin-transform-flow-strip-types": "^6.0.14",
+    "babel-plugin-transform-object-rest-spread": "^6.0.14",
     "babel-plugin-transform-react-jsx": "^6.0.14",
-    "babel-plugin-transform-regenerator": "^6.0.14",
+    "babel-plugin-transform-regenerator": "^6.0.18",
     "babel-plugin-transform-runtime": "^6.0.14",
     "babel-preset-es2015": "^6.0.14",
-    "babel-preset-nktpro": "0.0.2",
     "babel-preset-react": "^6.0.14",
     "babel-preset-stage-0": "^6.0.14",
+    "babel-types": "^6.0.19",
     "bluebird": "^3.0.3",
     "core-js": "^1.2.4",
     "css-loader": "^0.21.0",
@@ -48,6 +50,7 @@
     "es6-symbol": "^3.0.1",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
+    "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "grunt": "^0.4.5",
@@ -55,6 +58,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.0.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^3.5.0",
     "gulp-typescript": "^2.9.2",
